RS application is in MVP mode - can be pushed to demo site for hackathon

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -98,6 +98,9 @@ body {
     border-color: transparent;
     box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
   }
-#large-container{
+.large-container{
     max-width: 2500px !important;
+}
+.card-header{
+    background-color: #ffffff !important;
 }
